Set table overflow for small screen and fix app-container centering

--- a/assets/css/components/_app.scss
+++ b/assets/css/components/_app.scss
@@ -44,6 +44,6 @@
 
   .app-container {
     padding: 2.5rem;
-    margin-left: 20rem;
+    margin-left: 18rem;
   }
 }
